// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Upload Component > props.draggable: theme=image & draggable=true, fail file render fine 1`] = `
<div
  class="t-upload"
>
  <input
    accept=""
    hidden=""
    type="file"
  />
  <!---->
  <div
    class="t-upload__dragger t-upload__dragger-error"
  >
    <div
      class="t-upload__dragger-progress"
    >
      <div
        class="t-upload__dragger-img-wrap"
      >
        
        <div
          class="t-image__wrapper t-image__wrapper--shape-square"
          fallback=""
          referrerpolicy="strict-origin-when-cross-origin"
        >
          <!---->
          <!---->
          <!---->
          <img
            alt=""
            class="t-image t-image--fit-fill t-image--position-center"
            referrerpolicy="strict-origin-when-cross-origin"
            src="https://image4.png"
          />
          <div
            class="t-image__loading"
          >
            <div
              class="t-space t-space-align-center t-space-vertical"
              style="gap: 8px;"
            >
              
              
              <div
                class="t-space-item"
              >
                <svg
                  class="t-icon t-icon-image"
                  fill="none"
                  height="1em"
                  style="font-size: 24px;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <!---->
              
              
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        
      </div>
      <div
        class="t-upload__dragger-progress-info"
      >
        
        <div
          class="t-upload__dragger-text"
        >
          <span
            class="t-upload__single-name"
          >
            image4.png
          </span>
          <!---->
          <!---->
          <svg
            class="t-icon t-icon-error-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 1a11 11 0 110 22 11 11 0 010-22zm-1 13h2V6.5h-2V14zm2 1.5h-2v2h2v-2z"
              fill="currentColor"
            />
          </svg>
        </div>
        <small
          class="t-size-s"
        >
          文件大小
          ：
          
        </small>
        <small
          class="t-size-s"
        >
          上传日期
          ：
          -
        </small>
        
        <div
          class="t-upload__dragger-btns"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-upload__dragger-btns"
        >
          <button
            class="t-button t-button--variant-text t-button--theme-primary t-upload__dragger-progress-cancel"
            href=""
            tabindex="0"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              重新选择
              
            </span>
          </button>
          <button
            class="t-button t-button--variant-text t-button--theme-danger t-upload__dragger-delete-btn"
            href=""
            tabindex="0"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
  
</div>
`;

exports[`Upload Component > props.draggable: theme=image & draggable=true, progress file render fine 1`] = `
<div
  class="t-upload"
>
  <input
    accept=""
    hidden=""
    type="file"
  />
  <!---->
  <div
    class="t-upload__dragger"
  >
    <div
      class="t-upload__dragger-progress"
    >
      <div
        class="t-upload__dragger-img-wrap"
      >
        
        <div
          class="t-image__wrapper t-image__wrapper--shape-square"
          fallback=""
          referrerpolicy="strict-origin-when-cross-origin"
        >
          <!---->
          <!---->
          <!---->
          <img
            alt=""
            class="t-image t-image--fit-fill t-image--position-center"
            referrerpolicy="strict-origin-when-cross-origin"
            src="https://image2.png"
          />
          <div
            class="t-image__loading"
          >
            <div
              class="t-space t-space-align-center t-space-vertical"
              style="gap: 8px;"
            >
              
              
              <div
                class="t-space-item"
              >
                <svg
                  class="t-icon t-icon-image"
                  fill="none"
                  height="1em"
                  style="font-size: 24px;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <!---->
              
              
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        
      </div>
      <div
        class="t-upload__dragger-progress-info"
      >
        
        <div
          class="t-upload__dragger-text"
        >
          <span
            class="t-upload__single-name"
          >
            image2.png
          </span>
          <div
            class="t-upload__single-progress"
          >
            <div
              class="t-loading--center t-size-m t-loading"
            >
              <svg
                class="t-loading__gradient t-icon-loading"
                height="1em"
                size="medium"
                version="1.1"
                viewBox="0 0 12 12"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <foreignobject
                  height="12"
                  width="12"
                  x="0"
                  y="0"
                >
                  <div
                    class="t-loading__gradient-conic"
                  />
                </foreignobject>
              </svg>
              <!---->
            </div>
            <span
              class="t-upload__single-percent"
            >
              80
              %
            </span>
          </div>
          <!---->
          <!---->
        </div>
        <small
          class="t-size-s"
        >
          文件大小
          ：
          
        </small>
        <small
          class="t-size-s"
        >
          上传日期
          ：
          -
        </small>
        
        <div
          class="t-upload__dragger-btns"
        >
          <button
            class="t-button t-button--variant-text t-button--theme-primary t-upload__dragger-progress-cancel"
            href=""
            tabindex="0"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              取消上传
              
            </span>
          </button>
          <!---->
        </div>
        <!---->
      </div>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
  
</div>
`;

exports[`Upload Component > props.draggable: theme=image & draggable=true, success file render fine 1`] = `
<div
  class="t-upload"
>
  <input
    accept=""
    hidden=""
    type="file"
  />
  <!---->
  <div
    class="t-upload__dragger"
  >
    <div
      class="t-upload__dragger-progress"
    >
      <div
        class="t-upload__dragger-img-wrap"
      >
        
        <div
          class="t-image__wrapper t-image__wrapper--shape-square"
          fallback=""
          referrerpolicy="strict-origin-when-cross-origin"
        >
          <!---->
          <!---->
          <!---->
          <img
            alt=""
            class="t-image t-image--fit-fill t-image--position-center"
            referrerpolicy="strict-origin-when-cross-origin"
            src="https://tdesign.gtimg.com/demo/demo-image-1.png"
          />
          <div
            class="t-image__loading"
          >
            <div
              class="t-space t-space-align-center t-space-vertical"
              style="gap: 8px;"
            >
              
              
              <div
                class="t-space-item"
              >
                <svg
                  class="t-icon t-icon-image"
                  fill="none"
                  height="1em"
                  style="font-size: 24px;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <!---->
              
              
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        
      </div>
      <div
        class="t-upload__dragger-progress-info"
      >
        
        <div
          class="t-upload__dragger-text"
        >
          <span
            class="t-upload__single-name"
          >
            image1.png
          </span>
          <!---->
          <svg
            class="t-icon t-icon-check-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
              fill="currentColor"
            />
          </svg>
          <!---->
        </div>
        <small
          class="t-size-s"
        >
          文件大小
          ：
          
        </small>
        <small
          class="t-size-s"
        >
          上传日期
          ：
          -
        </small>
        
        <div
          class="t-upload__dragger-btns"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-upload__dragger-btns"
        >
          <button
            class="t-button t-button--variant-text t-button--theme-primary t-upload__dragger-progress-cancel"
            href=""
            tabindex="0"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              重新选择
              
            </span>
          </button>
          <button
            class="t-button t-button--variant-text t-button--theme-danger t-upload__dragger-delete-btn"
            href=""
            tabindex="0"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
  
</div>
`;

exports[`Upload Component > props.draggable: theme=image & draggable=true, success file render fine with file.response.url 1`] = `
<div
  class="t-upload"
>
  <input
    accept=""
    hidden=""
    type="file"
  />
  <!---->
  <div
    class="t-upload__dragger"
  >
    <div
      class="t-upload__dragger-progress"
    >
      <div
        class="t-upload__dragger-img-wrap"
      >
        
        <div
          class="t-image__wrapper t-image__wrapper--shape-square"
          fallback=""
          referrerpolicy="strict-origin-when-cross-origin"
        >
          <!---->
          <!---->
          <!---->
          <img
            alt=""
            class="t-image t-image--fit-fill t-image--position-center"
            referrerpolicy="strict-origin-when-cross-origin"
            src="https://tdesign.gtimg.com/demo/demo-image-1.png"
          />
          <div
            class="t-image__loading"
          >
            <div
              class="t-space t-space-align-center t-space-vertical"
              style="gap: 8px;"
            >
              
              
              <div
                class="t-space-item"
              >
                <svg
                  class="t-icon t-icon-image"
                  fill="none"
                  height="1em"
                  style="font-size: 24px;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <!---->
              
              
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        
      </div>
      <div
        class="t-upload__dragger-progress-info"
      >
        
        <div
          class="t-upload__dragger-text"
        >
          <span
            class="t-upload__single-name"
          >
            image1.png
          </span>
          <!---->
          <svg
            class="t-icon t-icon-check-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
              fill="currentColor"
            />
          </svg>
          <!---->
        </div>
        <small
          class="t-size-s"
        >
          文件大小
          ：
          
        </small>
        <small
          class="t-size-s"
        >
          上传日期
          ：
          -
        </small>
        
        <div
          class="t-upload__dragger-btns"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-upload__dragger-btns"
        >
          <button
            class="t-button t-button--variant-text t-button--theme-primary t-upload__dragger-progress-cancel"
            href=""
            tabindex="0"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              重新选择
              
            </span>
          </button>
          <button
            class="t-button t-button--variant-text t-button--theme-danger t-upload__dragger-delete-btn"
            href=""
            tabindex="0"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
  
</div>
`;

exports[`Upload Component > props.draggable: theme=image & draggable=true, waiting file render fine 1`] = `
<div
  class="t-upload"
>
  <input
    accept=""
    hidden=""
    type="file"
  />
  <!---->
  <div
    class="t-upload__dragger"
  >
    <div
      class="t-upload__dragger-progress"
    >
      <div
        class="t-upload__dragger-img-wrap"
      >
        
        <div
          class="t-image__wrapper t-image__wrapper--shape-square"
          fallback=""
          referrerpolicy="strict-origin-when-cross-origin"
        >
          <!---->
          <!---->
          <!---->
          <img
            alt=""
            class="t-image t-image--fit-fill t-image--position-center"
            referrerpolicy="strict-origin-when-cross-origin"
            src="https://image3.png"
          />
          <div
            class="t-image__loading"
          >
            <div
              class="t-space t-space-align-center t-space-vertical"
              style="gap: 8px;"
            >
              
              
              <div
                class="t-space-item"
              >
                <svg
                  class="t-icon t-icon-image"
                  fill="none"
                  height="1em"
                  style="font-size: 24px;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <!---->
              
              
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        
      </div>
      <div
        class="t-upload__dragger-progress-info"
      >
        
        <div
          class="t-upload__dragger-text"
        >
          <span
            class="t-upload__single-name"
          >
            image3.png
          </span>
          <!---->
          <!---->
          <!---->
        </div>
        <small
          class="t-size-s"
        >
          文件大小
          ：
          
        </small>
        <small
          class="t-size-s"
        >
          上传日期
          ：
          -
        </small>
        
        <div
          class="t-upload__dragger-btns"
        >
          <button
            class="t-button t-button--variant-text t-button--theme-primary t-upload__dragger-progress-cancel"
            href=""
            tabindex="0"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              取消上传
              
            </span>
          </button>
          <!---->
        </div>
        <!---->
      </div>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
  
</div>
`;

exports[`Upload Component > props.theme: theme=file-flow works fine 1`] = `
<div
  class="t-upload"
>
  <input
    accept=""
    hidden=""
    type="file"
  />
  <!---->
  <!---->
  <!---->
  <div
    class="t-upload__flow t-upload__flow-file-flow"
  >
    <div
      class="t-upload__flow-op"
    >
      
      <div
        class="t-upload__trigger"
      >
        <button
          class="t-button t-button--variant-outline t-button--theme-default"
          href=""
          tabindex="0"
          type="button"
        >
          
          <svg
            class="t-icon t-icon-upload"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 2.59l5.91 5.91-1.41 1.41-3.5-3.5V16h-2V6.41l-3.5 3.5L6.09 8.5 12 2.59zM4.5 14v5h15v-5h2v7h-19v-7h2z"
              fill="currentColor"
            />
          </svg>
          <span
            class="t-button__text"
          >
            
            重新选择
            
          </span>
          
        </button>
      </div>
      
      
    </div>
    <!---->
    <table
      class="t-upload__flow-table"
    >
      <thead>
        <tr>
          <th>
            文件名
          </th>
          <th
            style="min-width: 120px;"
          >
            文件大小
          </th>
          <th
            style="min-width: 120px;"
          >
            状态
          </th>
          <th>
            操作
          </th>
        </tr>
      </thead>
      <tbody>
        <!---->
        
        <tr>
          <td
            class="t-upload__file-name"
          >
            file1.txt
          </td>
          <td>
            
          </td>
          <td>
            <div
              class="t-upload__flow-status"
            >
              <svg
                class="t-icon t-icon-check-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
                  fill="currentColor"
                />
              </svg>
              <span
                class="t-upload__file-flow-success"
              >
                上传成功
                
              </span>
            </div>
          </td>
          <td>
            <button
              class="t-button t-button--variant-text t-button--theme-primary t-upload__delete"
              href=""
              tabindex="0"
              type="button"
            >
              <span
                class="t-button__text"
              >
                删除
              </span>
            </button>
          </td>
        </tr>
        <tr>
          <td
            class="t-upload__file-name"
          >
            file2.txt
          </td>
          <td>
            
          </td>
          <td>
            <div
              class="t-upload__flow-status"
            >
              <svg
                class="t-icon t-icon-time-filled"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 23a11 11 0 110-22 11 11 0 010 22zm1-17.5h-2v6.91l4 4L16.41 15 13 11.59V5.5z"
                  fill="currentColor"
                />
              </svg>
              <span
                class="t-upload__file-flow-waiting"
              >
                待上传
                
              </span>
            </div>
          </td>
          <td>
            <button
              class="t-button t-button--variant-text t-button--theme-primary t-upload__delete"
              href=""
              tabindex="0"
              type="button"
            >
              <span
                class="t-button__text"
              >
                删除
              </span>
            </button>
          </td>
        </tr>
        <tr>
          <td
            class="t-upload__file-name"
          >
            file3.txt
          </td>
          <td>
            
          </td>
          <td>
            <div
              class="t-upload__flow-status"
            >
              <svg
                class="t-icon t-icon-error-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 1a11 11 0 110 22 11 11 0 010-22zm-1 13h2V6.5h-2V14zm2 1.5h-2v2h2v-2z"
                  fill="currentColor"
                />
              </svg>
              <span
                class="t-upload__file-flow-fail"
              >
                上传失败
                
              </span>
            </div>
          </td>
          <td>
            <button
              class="t-button t-button--variant-text t-button--theme-primary t-upload__delete"
              href=""
              tabindex="0"
              type="button"
            >
              <span
                class="t-button__text"
              >
                删除
              </span>
            </button>
          </td>
        </tr>
        <tr>
          <td
            class="t-upload__file-name"
          >
            file4.txt
          </td>
          <td>
            
          </td>
          <td>
            <div
              class="t-upload__flow-status"
            >
              <div
                class="t-loading--center t-size-m t-loading"
              >
                <svg
                  class="t-loading__gradient t-icon-loading"
                  height="1em"
                  size="medium"
                  version="1.1"
                  viewBox="0 0 12 12"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <foreignobject
                    height="12"
                    width="12"
                    x="0"
                    y="0"
                  >
                    <div
                      class="t-loading__gradient-conic"
                    />
                  </foreignobject>
                </svg>
                <!---->
              </div>
              <span
                class="t-upload__file-flow-progress"
              >
                上传中
                 90%
              </span>
            </div>
          </td>
          <td>
            <button
              class="t-button t-button--variant-text t-button--theme-primary t-upload__delete"
              href=""
              tabindex="0"
              type="button"
            >
              <span
                class="t-button__text"
              >
                删除
              </span>
            </button>
          </td>
        </tr>
        
      </tbody>
    </table>
    <!---->
    
    <!---->
    <!--teleport start-->
    <!--teleport end-->
    
  </div>
  <!---->
  <!---->
  
</div>
`;

exports[`Upload Component > props.theme: theme=image-flow works fine 1`] = `
<div
  class="t-upload"
>
  <input
    accept=""
    hidden=""
    type="file"
  />
  <!---->
  <!---->
  <!---->
  <div
    class="t-upload__flow t-upload__flow-image-flow"
  >
    <div
      class="t-upload__flow-op"
    >
      
      <div
        class="t-upload__trigger"
      >
        <button
          class="t-button t-button--variant-outline t-button--theme-default"
          href=""
          tabindex="0"
          type="button"
        >
          
          <svg
            class="t-icon t-icon-upload"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 2.59l5.91 5.91-1.41 1.41-3.5-3.5V16h-2V6.41l-3.5 3.5L6.09 8.5 12 2.59zM4.5 14v5h15v-5h2v7h-19v-7h2z"
              fill="currentColor"
            />
          </svg>
          <span
            class="t-button__text"
          >
            
            重新选择
            
          </span>
          
        </button>
      </div>
      
      
    </div>
    <div
      class="t-upload__flow-card-area"
    >
      <ul
        class="t-upload__card clearfix"
      >
        
        <li
          class="t-upload__card-item"
        >
          <div
            class="t-upload__card-content t-is-bordered"
          >
            <!---->
            <div
              class="t-image__wrapper t-image__wrapper--shape-square t-upload__card-image"
              fallback=""
              referrerpolicy="strict-origin-when-cross-origin"
            >
              <!---->
              <!---->
              <!---->
              <img
                alt=""
                class="t-image t-image--fit-fill t-image--position-center"
                referrerpolicy="strict-origin-when-cross-origin"
                src=""
              />
              <div
                class="t-image__loading"
              >
                <div
                  class="t-space t-space-align-center t-space-vertical"
                  style="gap: 8px;"
                >
                  
                  
                  <div
                    class="t-space-item"
                  >
                    <svg
                      class="t-icon t-icon-image"
                      fill="none"
                      height="1em"
                      style="font-size: 24px;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <!---->
                  
                  
                </div>
              </div>
              <!---->
              <!---->
            </div>
            <div
              class="t-upload__card-mask"
            >
              <!---->
              <span
                class="t-upload__card-mask-item t-upload__delete"
              >
                <svg
                  class="t-icon t-icon-delete"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M7.5 1h9v3H22v2h-2.03l-.5 17H4.53l-.5-17H2V4h5.5V1zm2 3h5V3h-5v1zM6.03 6l.44 15h11.06l.44-15H6.03zM13 8v11h-2V8h2z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <p
            class="t-upload__card-name t-upload__flow-status"
          >
            <svg
              class="t-icon t-icon-check-circle-filled"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
                fill="currentColor"
              />
            </svg>
            img.txt
          </p>
        </li>
        <li
          class="t-upload__card-item"
        >
          <div
            class="t-upload__card-content t-is-bordered"
          >
            <!---->
            <div
              class="t-image__wrapper t-image__wrapper--shape-square t-upload__card-image"
              fallback=""
              referrerpolicy="strict-origin-when-cross-origin"
            >
              <!---->
              <!---->
              <!---->
              <img
                alt=""
                class="t-image t-image--fit-fill t-image--position-center"
                referrerpolicy="strict-origin-when-cross-origin"
                src="https://img1.txt"
              />
              <div
                class="t-image__loading"
              >
                <div
                  class="t-space t-space-align-center t-space-vertical"
                  style="gap: 8px;"
                >
                  
                  
                  <div
                    class="t-space-item"
                  >
                    <svg
                      class="t-icon t-icon-image"
                      fill="none"
                      height="1em"
                      style="font-size: 24px;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <!---->
                  
                  
                </div>
              </div>
              <!---->
              <!---->
            </div>
            <div
              class="t-upload__card-mask"
            >
              <span
                class="t-upload__card-mask-item"
              >
                <svg
                  class="t-icon t-icon-browse"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    clipPath="url(#clip0_8726_7319)"
                  >
                    <path
                      d="M2.1 12a10.5 10.5 0 0019.8 0 10.5 10.5 0 00-19.8 0zm-2.01-.3a12.5 12.5 0 0123.82 0l.1.3-.1.3a12.5 12.5 0 01-23.82 0l-.1-.3.1-.3zM12 9a3 3 0 100 6 3 3 0 000-6zm-5 3a5 5 0 1110 0 5 5 0 01-10 0z"
                      fill="currentColor"
                    />
                  </g>
                </svg>
                <span
                  class="t-upload__card-mask-item-divider"
                />
              </span>
              <span
                class="t-upload__card-mask-item t-upload__delete"
              >
                <svg
                  class="t-icon t-icon-delete"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M7.5 1h9v3H22v2h-2.03l-.5 17H4.53l-.5-17H2V4h5.5V1zm2 3h5V3h-5v1zM6.03 6l.44 15h11.06l.44-15H6.03zM13 8v11h-2V8h2z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <p
            class="t-upload__card-name t-upload__flow-status"
          >
            <svg
              class="t-icon t-icon-check-circle-filled"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
                fill="currentColor"
              />
            </svg>
            img1.txt
          </p>
        </li>
        <li
          class="t-upload__card-item"
        >
          <div
            class="t-upload__card-content"
          >
            <!---->
            <div
              class="t-image__wrapper t-image__wrapper--shape-square t-upload__card-image"
              fallback=""
              referrerpolicy="strict-origin-when-cross-origin"
            >
              <!---->
              <!---->
              <!---->
              <img
                alt=""
                class="t-image t-image--fit-fill t-image--position-center"
                referrerpolicy="strict-origin-when-cross-origin"
                src="https://img2.txt"
              />
              <div
                class="t-image__loading"
              >
                <div
                  class="t-space t-space-align-center t-space-vertical"
                  style="gap: 8px;"
                >
                  
                  
                  <div
                    class="t-space-item"
                  >
                    <svg
                      class="t-icon t-icon-image"
                      fill="none"
                      height="1em"
                      style="font-size: 24px;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <!---->
                  
                  
                </div>
              </div>
              <!---->
              <!---->
            </div>
            <div
              class="t-upload__card-mask"
            >
              <span
                class="t-upload__card-mask-item"
              >
                <svg
                  class="t-icon t-icon-browse"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    clipPath="url(#clip0_8726_7319)"
                  >
                    <path
                      d="M2.1 12a10.5 10.5 0 0019.8 0 10.5 10.5 0 00-19.8 0zm-2.01-.3a12.5 12.5 0 0123.82 0l.1.3-.1.3a12.5 12.5 0 01-23.82 0l-.1-.3.1-.3zM12 9a3 3 0 100 6 3 3 0 000-6zm-5 3a5 5 0 1110 0 5 5 0 01-10 0z"
                      fill="currentColor"
                    />
                  </g>
                </svg>
                <span
                  class="t-upload__card-mask-item-divider"
                />
              </span>
              <span
                class="t-upload__card-mask-item t-upload__delete"
              >
                <svg
                  class="t-icon t-icon-delete"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M7.5 1h9v3H22v2h-2.03l-.5 17H4.53l-.5-17H2V4h5.5V1zm2 3h5V3h-5v1zM6.03 6l.44 15h11.06l.44-15H6.03zM13 8v11h-2V8h2z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <p
            class="t-upload__card-name t-upload__flow-status"
          >
            <svg
              class="t-icon t-icon-time-filled"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 23a11 11 0 110-22 11 11 0 010 22zm1-17.5h-2v6.91l4 4L16.41 15 13 11.59V5.5z"
                fill="currentColor"
              />
            </svg>
            img2.txt
          </p>
        </li>
        <li
          class="t-upload__card-item"
        >
          <div
            class="t-upload__card-content t-is-bordered"
          >
            <div
              class="t-upload__card-status-wrap t-upload__image-flow-fail"
            >
              <svg
                class="t-icon t-icon-error-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 1a11 11 0 110 22 11 11 0 010-22zm-1 13h2V6.5h-2V14zm2 1.5h-2v2h2v-2z"
                  fill="currentColor"
                />
              </svg>
              <p>
                上传失败
                
              </p>
            </div>
            <!---->
            <div
              class="t-upload__card-mask"
            >
              <!---->
              <span
                class="t-upload__card-mask-item t-upload__delete"
              >
                <svg
                  class="t-icon t-icon-delete"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M7.5 1h9v3H22v2h-2.03l-.5 17H4.53l-.5-17H2V4h5.5V1zm2 3h5V3h-5v1zM6.03 6l.44 15h11.06l.44-15H6.03zM13 8v11h-2V8h2z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <p
            class="t-upload__card-name t-upload__flow-status"
          >
            <!---->
            img3.txt
          </p>
        </li>
        <li
          class="t-upload__card-item"
        >
          <div
            class="t-upload__card-content t-is-bordered"
          >
            <div
              class="t-upload__card-status-wrap t-upload__image-flow-progress"
            >
              <div
                class="t-loading--center t-size-m t-loading"
              >
                <svg
                  class="t-loading__gradient t-icon-loading"
                  height="1em"
                  size="medium"
                  version="1.1"
                  viewBox="0 0 12 12"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <foreignobject
                    height="12"
                    width="12"
                    x="0"
                    y="0"
                  >
                    <div
                      class="t-loading__gradient-conic"
                    />
                  </foreignobject>
                </svg>
                <!---->
              </div>
              <p>
                上传中
                 90%
              </p>
            </div>
            <!---->
            <div
              class="t-upload__card-mask"
            >
              <!---->
              <span
                class="t-upload__card-mask-item t-upload__delete"
              >
                <svg
                  class="t-icon t-icon-delete"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M7.5 1h9v3H22v2h-2.03l-.5 17H4.53l-.5-17H2V4h5.5V1zm2 3h5V3h-5v1zM6.03 6l.44 15h11.06l.44-15H6.03zM13 8v11h-2V8h2z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <p
            class="t-upload__card-name t-upload__flow-status"
          >
            <!---->
            img4.txt
          </p>
        </li>
        
      </ul>
    </div>
    <!---->
    <!---->
    
    <!---->
    <!--teleport start-->
    <!--teleport end-->
    
  </div>
  <!---->
  <!---->
  
</div>
`;
